tests/paczka1/small_fuzzy/16695506.err
Error in line 1: bb9k4pif S358 8,3
Error in line 3: bb9k4pif S400 84,1
